# pmet_project

./: .clang-format  .gitignore  Makefile  README.md  TODO.md  submit-after-rename.md  verification_report.md
.github/workflows/: ci.yml  test.yml
PMET_project/: README.md  TODO.md
PMET_project/docs/: STYLE_REFACTOR_REPORT.md
PMET_project/scripts/: build_all.sh  clean.sh  compare_branches.sh  run_fimo_official.sh  run_indexing.sh  run_pairing.sh  run_pipeline.sh
apps/cli/: run.sh
apps/pmet_backend/: .dockerignore  Dockerfile  README.md  config.py  proc.py  requirements.txt  test_api.py  test_task_creation_security.py  test_upload_routes.py
apps/pmet_frontend/: .dockerignore  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
core/indexing/: CMakeLists.txt
core/indexing/c/scripts/: build.sh  debug_run.sh  run.sh
core/indexing/c/src/: HashTable.h  MemCheck.h  ScoreLabelPairVector.h
core/indexing/c/test/: TestHashTable.c
core/indexing/cpp/src/: cFimoFile.cpp  cMotifHit.cpp  fastFileReader.hpp
core/indexing/fused_fimo/scripts/: build.sh  run.sh
core/indexing/fused_fimo/src/fimo/: array.c  config.h  dir.h  motif-in.c  motif.c  string-list.h
core/indexing/fused_fimo/src/pmet_index/: pmet-index-MemCheck.c  pmet-index-MemCheck.h  pmet-index-ScoreLabelPairVector.c  pmet-index-ScoreLabelPairVector.h
core/indexing/fused_fimo/utils/: scan_fimo_header_filess.py
core/indexing/src/fimo/: cisml.h  fimo.c  matrix.c  pssm.c  seq.c  string-builder.c  utils.c
core/indexing/src/pmet_index/: pmet-index-FileRead.c  pmet-index-pair-test.h  pmet-index-utils.c  pmet-index-utils.h
core/indexing/tests/: test_main.cpp  test_pair_test.cpp  test_runner.hpp  test_utils.cpp
core/legacy/indexing_c/: CMakeLists.txt
core/legacy/indexing_c/scripts/: run.sh  run_all_test.sh
core/legacy/indexing_c/src/: FimoFile.h  HashTable.c  MemCheck.c  MotifHitVector.c  Node.c  Node.h  PromoterLength.h  ScoreLabelPairVector.c
core/legacy/indexing_c/test/: TestFimoFile.c  TestMemCheck.c
core/legacy/indexing_cpp/: CMakeLists.txt
core/legacy/indexing_cpp/scripts/: run.sh  run_interval.sh
core/legacy/indexing_cpp/src/: main.cpp
core/pairing/: CMakeLists.txt
core/pairing/original/: CMakeLists.txt
core/pairing/original/doc/: _.md
core/pairing/original/scripts/: run.sh
core/pairing/original/src/: motifComparison.hpp  utils.cpp  utils.hpp
core/pairing/parallel/scripts/: run.sh
core/pairing/parallel/src/: Output.cpp  main.cpp  utils.cpp
core/pairing/src/: Output.hpp  motif.cpp  motif.hpp  motifComparison.cpp  motifComparison.hpp  utils.hpp
core/pairing/tests/: test_bh_correction.cpp  test_binomial_poisson.cpp  test_coloc.cpp  test_fair_division.cpp  test_geometric_binomial.cpp  test_main.cpp  test_minhash_sketch.cpp  test_motif_instances_overlap.cpp  test_output_sort.cpp  test_runner.hpp  test_sort_hits.cpp
core/scripts/: build_all.sh
data/: clustered.meme  genome_n_annotation.json  indexing_metadata.json
data/app/: genome_n_annotation.json  indexing_metadata.json  motif_databases.json
data/configure/: admin_settings.json  nginx_link.txt
data/demo_intervals/: motif_more.meme
data/genes/: salt_top300.txt
data/homotypic_intervals/: intervals.fa  motif_more.meme
data/homotypic_promoters/: IC.txt
data/motifs/: CIS-BP2.meme  Jaspar_plants_non_redundant_2022.meme  Plant_Cistrome_DB.meme  Plant_TF_DB.meme  random.meme
deploy/: Makefile  docker-compose.yml
deploy/configure/: admin_settings.json  public_base_url.txt  runtime_calibration.json
deploy/nginx/: nginx.conf
docs/: README.md  deployment.md  email-setup.md  glossary.md
docs/analysis/: PMET_method_en.md  TODO.md
docs/archive/: README.md  analysis-README.md  analysis-TODO.md  core-README.md  pmet-method-zh.md  shiny-README.md  verification_log.md
docs/legal/: README.md
docs/methods/: homotypic-contract.md  naming-conventions.md  pmet.md  promoter-extraction-zh.md  promoter-extraction.md
docs/perf/: minhash_calibration.md  runtime_reference.md
docs/tests/: coverage.md
docs/workflows/: elements.md  intervals.md  pair_only.md  promoter.md
legacy/from_analysis/legacy/src/pmet/: CMakeLists.txt  build.sh  main.cpp  motif.cpp
legacy/from_shiny/legacy/PMETdev/src/pmetParallel/: CMakeLists.txt  Output.cpp  build.sh  motif.hpp  utils.cpp  utils.hpp
pipeline/data/: download_pmet_data.sh  fetch_tair10.sh
pipeline/indexing/: pmet_index_element.sh
pipeline/python/: build_promoters.py  collapse_element_fimohits.py  run_homotypic.py
pipeline/r/: draw_heatmap.R  install_packages.R
pipeline/workflows/: elements.sh  intervals.sh  pair_only.sh  promoter.sh
pmet_analysis_pipeline/: run.sh
pmet_analysis_pipeline/data/: Franco-Zorrilla_et_al_2014.meme  motif_output.txt
pmet_analysis_pipeline/docs/: README_promoter_pipeline.md  naming_conventions.md  verification_log.md
pmet_analysis_pipeline/legacy/: 04_FIMO_old_and_new.sh  05_genomic_elements_all_isoforms.sh  genomic_element_all_isoforms.sh
pmet_analysis_pipeline/legacy/src/indexing/: CMakeLists.txt  cMotifHit.cpp  fastFileReader.cpp  main.cpp  readme.md
pmet_analysis_pipeline/scripts/: fetch_tair10.sh
pmet_shiny_app/: LICENSE.md  Makefile  docker-compose.yml
pmet_shiny_app/docs/: deployment.md
pmet_shiny_app/legacy/: PMETdev.textClipping  pmet_binary_compile.sh  setup_R.sh  test.R
pmet_shiny_app/nginx/: nginx.conf
pmet_shiny_app/pmet_backend/: Dockerfile  config.py  requirements.txt  test_api.py
pmet_shiny_app/pmet_frontend/: Dockerfile  README.md  package-lock.json  package.json
pmet_shiny_app/scripts/: download_pmet_data.sh
scripts/: fetch_data.sh  fetch_reference.sh
scripts/dev/: smoke_mail_dispatch.py
scripts/lib/: fimo_monitor.sh  minhash.sh  progress.sh  timer.sh
scripts/python/: assess_integrity.py  build_promoters.py  calculateICfrommeme_IC_to_csv.py  check_homotypic_contract.py  collapse_element_fimohits.py  run_homotypic.py
scripts/r/: draw_heatmap.R  dump_processed_data.R  heatmap.R  motif_pair_plot_hetero.R  motif_pair_plot_homog.R  (+1 more)
tests/: README.md
(+532 files in other folders)
